@@ -1,0 +1,61 @@
+archetype
+	adl-test-ENTRY.domain_types.test
+
+concept
+	[at0000]
+description
+	details = <
+		["en"] = <
+			language = <"en">
+			purpose = <"parser test for CDvCodedText">
+			keywords = <"domain types">
+			copyright = <"copyright (c) 2006 ACODE HB">
+		>
+	>
+	lifecycle_state = <"draft">
+	original_author = <
+		["name"] = <"Rong Chen">
+		["organisation"] = <"ACODE HB">
+		["date"] = <"2006-07-12">
+	>
+
+definition
+	ENTRY[at0000] matches {	
+        types matches {
+            LIST[at0001] matches {
+                items cardinality matches {0..*} matches {
+                    ELEMENT[at10002] matches {	-- coded_text
+                        value matches {
+                            [local::
+                            at2001.0, 	-- initial
+                            at2001.1, 	-- wait
+                            at2001.2; 	-- completed
+                            at2001.0]   -- assumed value
+                        }
+                    }		
+                }
+            }
+        }
+	}
+
+ontology
+	primary_language = <"en">
+	languages_available = <"en", ...>
+	term_definitions = < 
+		["en"] = <
+			items = <
+				["at0000"] = <
+					text = <"domain types test">
+					description = <"domain types test">
+				>
+				["at0001"] = <
+					text = <"items">
+					description = <"items">
+				>
+				["at0002"] = <
+					text = <"*">
+					description = <"*">
+				>
+			>
+		>
+	>
