@@ -38,7 +38,7 @@ definition
                                             ELEMENT[at1004] matches {	-- c_quantity     
 							                    value matches {
 													C_QUANTITY <
-														property = [openehr::128]
+														property = <[openehr::128]>
 														list = <									
 															["1"] = <
 																units = <"yr">
