@@ -30,3 +30,6 @@
 
 2006/07/11
 .added support for adl_version and controlled
+.bug fix for c_dv_quantity
+.quick fix for other_contributors in arch_desc
+.added assumed_value for c_coded_text
